--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,14 @@
     <url>https://github.com/thekrakken/java-grok/issues</url>
   </issueManagement>
 
+  <distributionManagement>
+    <repository>
+    <id>internal.repo</id>
+    <name>Temp Staging Repository</name>
+    <url>file://${user.dir}/target/mvn-repo</url>
+    </repository>
+  </distributionManagement>
+
   <properties>
     <junit.version>4.11</junit.version>
     <named.regex.version>0.2.3</named.regex.version>
@@ -57,6 +65,7 @@
     <gson.version>2.2.2</gson.version>
     <!-- maven -->
     <java.version>1.6</java.version>
+    <github.global.server>github</github.global.server>
   </properties>
 
   <dependencies>
@@ -153,6 +162,36 @@
           </execution>
 	</executions>
       </plugin>
+        <plugin>
+            <artifactId>maven-deploy-plugin</artifactId>
+            <version>2.8.1</version>
+            <configuration>
+                <altDeploymentRepository>internal.repo::default::file://${user.dir}/target/mvn-repo</altDeploymentRepository>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>com.github.github</groupId>
+            <artifactId>site-maven-plugin</artifactId>
+            <version>0.11</version>
+            <configuration>
+                <message>Maven artifacts for ${project.version}</message>
+                <noJekyll>true</noJekyll>
+                <outputDirectory>${user.dir}/target/mvn-repo</outputDirectory>
+                <branch>refs/heads/mvn-repo</branch>
+                <includes><include>**/*</include></includes>
+                <repositoryName>java-grok</repositoryName>
+                <repositoryOwner>OpenSOC</repositoryOwner>
+            </configuration>
+            <executions>
+                <!-- run site-maven-plugin's 'site' target as part of the build's normal 'deploy' phase -->
+                <execution>
+                    <goals>
+                        <goal>site</goal>
+                    </goals>
+                    <phase>deploy</phase>
+                </execution>
+            </executions>
+        </plugin>
     </plugins>
 
     <pluginManagement>
